--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,17 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+env_default = uno
+
 [env:uno]
 platform = atmelavr
 board = uno
+framework = arduino
+monitor_speed = 115200
+
+[env:atmega328pb]
+platform = atmelavr
+board = atmega328pb
 framework = arduino
 monitor_speed = 115200
