upload to master

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,9 +16,11 @@ platform = atmelavr
 board = uno
 framework = arduino
 monitor_speed = 115200
+build_flags = -DEQ_ARCH_AVR -DEQ_BOARD_UNO
 
 [env:atmega328pb]
 platform = atmelavr
 board = atmega328pb
 framework = arduino
 monitor_speed = 115200
+build_flags = -DEQ_ARCH_AVR -DEQ_BOARD_ATMEGA328PB
