upload to master

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ board = uno
 framework = arduino
 monitor_speed = 115200
 build_flags = -DEQ_ARCH_AVR -DEQ_BOARD_UNO
+lib_extra_dirs = lib/avr
 
 [env:atmega328pb]
 platform = atmelavr
@@ -24,3 +25,4 @@ board = atmega328pb
 framework = arduino
 monitor_speed = 115200
 build_flags = -DEQ_ARCH_AVR -DEQ_BOARD_ATMEGA328PB
+lib_extra_dirs = lib/avr
