--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-env_default = uno
+env_default = atmega328pb
 
 [env:uno]
 platform = atmelavr
