upload to master

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,4 +25,4 @@ board = atmega328pb
 framework = arduino
 monitor_speed = 115200
 build_flags = -DEQ_ARCH_AVR -DEQ_BOARD_ATMEGA328PB
-lib_extra_dirs = lib/avr
+lib_extra_dirs = lib/avr, lib/avr_atmega328pb
