upload to master

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,11 +9,11 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-env_default = atmega328pb
+env_default = atmega328p
 
-[env:uno]
+[env:atmega328p]
 platform = atmelavr
-board = uno
+board = nanoatmega328new
 framework = arduino
 monitor_speed = 115200
 build_flags = -DEQ_ARCH_AVR -DEQ_BOARD_UNO
