upload to master

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@ platform = atmelavr
 board = nanoatmega328new
 framework = arduino
 monitor_speed = 115200
-build_flags = -DEQ_ARCH_AVR -DEQ_BOARD_UNO
+build_flags = -DEQ_ARCH_AVR -DEQ_BOARD_ATMEGA328P
 lib_extra_dirs = lib/avr
 
 [env:atmega328pb]
