--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@ platform = atmelavr
 board = nanoatmega328new
 framework = arduino
 monitor_speed = 115200
-build_flags = -DEQ_ARCH_AVR -DEQ_BOARD_ATMEGA328P
+build_flags = -Itest -DEQ_ARCH_AVR -DEQ_BOARD_ATMEGA328P
 lib_extra_dirs = lib/avr
 
 [env:atmega328pb]
@@ -24,5 +24,5 @@ platform = atmelavr
 board = atmega328pb
 framework = arduino
 monitor_speed = 115200
-build_flags = -DEQ_ARCH_AVR -DEQ_BOARD_ATMEGA328PB
+build_flags = -Itest -DEQ_ARCH_AVR -DEQ_BOARD_ATMEGA328PB
 lib_extra_dirs = lib/avr, lib/avr_atmega328pb
